--- a/templates/main.html
+++ b/templates/main.html
@@ -34,6 +34,7 @@
         <button type="button" class="btn btn-outline-secondary col-md-1 mx-3 rounded-pill hide" onclick="upload()" id="upload_btn"><span class="spinner-border spinner-border-sm hide"></span> Upload</button>
         <button type="button" class="btn btn-outline-secondary col-md-1 mx-3 rounded-pill" onclick="view()" id="view_button"><span class="spinner-border spinner-border-sm hide"></span> View</button>
         <button type="button" class="btn btn-outline-secondary col-md-1 mx-3 rounded-pill hide" onclick="back()" id="view_dlg_button">View...</button>
+        <button type="button" class="btn btn-outline-secondary col-md-1 mx-3 rounded-pill" onclick="createDlg()" id="upload_dlg_button">Create...</button>
         <button type="button" class="btn btn-outline-secondary col-md-1 mx-3 rounded-pill" onclick="uploadDlg()" id="upload_dlg_button">Upload...</button>
       </div>
       <div class="row" id="query-div">
@@ -54,6 +55,38 @@
         <div class="col-sm-12 center">
           <textarea class="" id="result" rows="23" style="width: 100%;" placeholder="&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;&#10;Input CSV Data to upload here."></textarea>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- The Modal -->
+  <div class="modal" id="createModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Create a custom object</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" placeholder="Enter object name" id="name">
+          </div>
+          <div class="form-group">
+            <label for="fields">Fields:</label>
+            <input type="text" class="form-control" placeholder="Enter fields with comma" id="fields">
+          </div>
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" onclick="createObj()">Create</button>
+        </div>
+
       </div>
     </div>
   </div>
